<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">
             <ImageView
                android:id="@+id/add_new_product_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/edit_txt_background"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_below="@+id/add_screen_title"
                android:src="@drawable/ic_baseline_add_photo_alternate_24"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_product_name"
                android:textSize="16dp"
                android:textColor="#3A3939"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/add_new_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_txt_background"
                android:padding="12dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_product_price"
                android:textSize="16dp"
                android:textColor="#3A3939"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>
            <EditText
                android:id="@+id/add_new_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_txt_background"
                android:padding="12dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:inputType="number"
              />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_product_description"
                android:textSize="16dp"
                android:textColor="#3A3939"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>
            <EditText
                android:id="@+id/add_new_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_txt_background"
                android:padding="12dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
              />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_below="@+id/add_new_screen_description"
        >
        <Button
            android:id="@+id/save_new_product_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="12dp"
            android:background="@drawable/btn_background"
            android:textColor="@android:color/white"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textSize="16sp" />
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="12dp"
            android:background="@drawable/btn_background"
            android:backgroundTint="#C4C4C4"
            android:textColor="#6C6C6C"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>